Opened 19 years ago

Closed 18 years ago

#547 closed bug (fixed)

[Screen] Doesn't work for VESA mode

Reported by: j_freeman@… Owned by: axeld
Priority: normal Milestone: R1
Component: Preferences/Screen Version:
Keywords: Cc: diver
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

Changing the resolution, colorspace, and/or refresh rate in the Screen preference does not do anything. The default combination (800x600/16-bit/60Hz) will "validate" and ask if you want to keep the settings, but no settings are ever applied. With other combos, it says it cannot even use the specified settings.

OTOH, using VESA Accepted on BeBits works just fine, allowing all available combos to work as expected.

Tested in VMware on WinXP, using any of several past revisions (the bug's existed for a long while).

Change History (4)

comment:1 by diver, 19 years ago

Cc: diver added

comment:2 by axeld, 19 years ago

Summary: [Screen] Doesn't work[Screen] Doesn't work for VESA mode

comment:3 by axeld, 18 years ago

Component: PreferencesPreferences/Screen
Description: modified (diff)
Platform: All

comment:4 by axeld, 18 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev19917.

Note: See TracTickets for help on using tickets.