Added special VESA mode support to the Screen preferences: the "Refresh Rate:" menu field will be hidden, and on resolution change, you get a message that tells you that the change will take effect with the next reboot. The "vesa" mode file will be written on exit if any changes were made. This closes bug #547.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@19917 a95241bf-73f2-0310-859d-f6bbb57e9c96